traversal.line.traversalbyline.TraversalByLine.scala.error
Compilation error:
TraversalByLine:4: error: method run is defined twice
  conflicting symbols both originated in file 'plm.runtime7.TraversalByLine'
override def run() {
             ^